[package]
name = "nsbt"
version = "0.1.0"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]

[dependencies]
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
futures = "0.1"
rustyline = "1.0"
bytes = "0.4"
json = "0.11"
rand = "0.3"
clap = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"