[package]
name = "nsbt"
version = "0.1.0"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]

[dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = "0.1"
futures = "0.1"
bytes = "0.4"
clap = "2"
log = "0.4"
simplelog = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
languageserver-types = "0.30"
url = "1"
url_serde = "0.2"